--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <version>4.5.3</version>
         </dependency>
 
+        <!--        阿里云oss-->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.10.2</version>
+        </dependency>
+
         <!--        jwt依赖-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
