--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,11 @@
             <artifactId>json</artifactId>
             <version>20200518</version>
         </dependency>
-
+        <!--        aop-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
