--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <version>3.3.2</version>
         </dependency>
 
+        <!--        pagehelper分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.13</version>
+        </dependency>
         <!--        数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
