--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
+        <!--        aop-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
